ARROW-15892: [C++] Dataset APIs require s3:ListBucket Permissions

This PR adds a boolean flag which can be used to avoid creating directories with the Dataset API for filesystems like s3.

**Checklist**
- [x]  Implementation to avoid creating directories
- [x] s3 filesystem tests with limited permissions (only put object permissions)

Closes #12701 from sanjibansg/s3-directory

Authored-by: Sanjiban Sengupta <sanjiban.sg@gmail.com>
Signed-off-by: Antoine Pitrou <antoine@python.org>